# multi-armed-bandits

./: .pre-commit-config.yaml  LICENSE  README.md  main.ipynb  pyproject.toml
bandits/: arms.py  bandits.py  plots.py
